fix: 金额趋势改为完整数字显示

--- a/index.html
+++ b/index.html
@@ -270,29 +270,28 @@
             [32, 38, 42, 35, 46, 51, 58]           // 理财包D
         ];
 
-        // 金额趋势数据（4个理财包 × 4个指标 × 7天，单位：千元）
+        // 金额趋势数据（4个理财包 × 3个指标 × 7天）
         const amountTrend = {
             // 累计参与金额
             accumulated: [
-                [3980, 4120, 4250, 4380, 4450, 4520, 4680],   // 理财包A
-                [2560, 2640, 2710, 2780, 2830, 2890, 2980],   // 理财包B
-                [1380, 1420, 1470, 1510, 1540, 1560, 1620],   // 理财包C
-                [860, 890, 920, 950, 970, 980, 1020]          // 理财包D
+                [3980000, 4120000, 4250000, 4380000, 4450000, 4520000, 4680000],   // 理财包A
+                [2560000, 2640000, 2710000, 2780000, 2830000, 2890000, 2980000],   // 理财包B
+                [1380000, 1420000, 1470000, 1510000, 1540000, 1560000, 1620000],   // 理财包C
+                [860000, 890000, 920000, 950000, 970000, 980000, 1020000]          // 理财包D
             ],
-            // 当前参与金额
             // 累计收益金额
             profit: [
-                [380, 400, 410, 430, 440, 450, 470],          // 理财包A
-                [190, 200, 210, 220, 220, 230, 240],          // 理财包B
-                [60, 65, 70, 72, 75, 78, 82],                 // 理财包C
-                [120, 130, 140, 145, 150, 156, 162]           // 理财包D
+                [380000, 400000, 410000, 430000, 440000, 450000, 470000],          // 理财包A
+                [190000, 200000, 210000, 220000, 220000, 230000, 240000],          // 理财包B
+                [60000, 65000, 70000, 72000, 75000, 78000, 82000],                 // 理财包C
+                [120000, 130000, 140000, 145000, 150000, 156000, 162000]           // 理财包D
             ],
             // 已赎回金额
             redeemed: [
-                [1130, 1200, 1240, 1300, 1330, 1340, 1430],   // 理财包A
-                [840, 860, 880, 900, 930, 970, 1000],         // 理财包B
-                [300, 300, 290, 300, 310, 310, 330],          // 理财包C
-                [240, 240, 240, 250, 260, 260, 270]           // 理财包D
+                [1130000, 1200000, 1240000, 1300000, 1330000, 1340000, 1430000],   // 理财包A
+                [840000, 860000, 880000, 900000, 930000, 970000, 1000000],         // 理财包B
+                [300000, 300000, 290000, 300000, 310000, 310000, 330000],          // 理财包C
+                [240000, 240000, 240000, 250000, 260000, 260000, 270000]           // 理财包D
             ]
         };
 
@@ -316,7 +315,7 @@
             const option = {
                 tooltip: {
                     trigger: 'item',
-                    formatter: '{b}: {c} USDT ({d}%)'
+                    formatter: '{b}: {c}  ({d}%)'
                 },
                 legend: {
                     orient: 'vertical',
@@ -362,7 +361,7 @@
                     ${currentAmountData.map(item => `
                         <tr>
                             <td class="product-name">${item.name}</td>
-                            <td class="amount">${item.value.toLocaleString()} USDT</td>
+                            <td class="amount">${item.value.toLocaleString()} </td>
                             <td>${(item.value / total * 100).toFixed(1)}%</td>
                         </tr>
                     `).join('')}
@@ -434,7 +433,7 @@
                 chart.setOption({
                     tooltip: {
                         trigger: 'axis',
-                        formatter: params => params.map(p => `${p.marker} ${p.seriesName}: ${p.value}千元`).join('<br/>')
+                        formatter: params => params.map(p => `${p.marker} ${p.seriesName}: ${p.value.toLocaleString()}`).join('<br/>')
                     },
                     legend: { data: products, top: 0 },
                     grid: { left: '3%', right: '4%', bottom: '3%', top: 40, containLabel: true },
@@ -446,7 +445,7 @@
                     },
                     yAxis: {
                         type: 'value',
-                        name: '金额(千元)',
+                        name: '金额',
                         splitLine: { lineStyle: { color: '#f0f0f0' } }
                     },
                     series: products.map((p, i) => ({
